Source/WebCore/html/HTMLOptionElement.h
@@ -25,16 +25,16 @@
 #ifndef HTMLOptionElement_h
 #define HTMLOptionElement_h
 
-#include "HTMLFormControlElement.h"
+#include "HTMLElement.h"
 
 namespace WebCore {
 
 class HTMLSelectElement;
 
-class HTMLOptionElement : public HTMLFormControlElement {
+class HTMLOptionElement : public HTMLElement {
 public:
-    static PassRefPtr<HTMLOptionElement> create(Document*, HTMLFormElement*);
-    static PassRefPtr<HTMLOptionElement> create(const QualifiedName&, Document*, HTMLFormElement*);
+    static PassRefPtr<HTMLOptionElement> create(Document*);
+    static PassRefPtr<HTMLOptionElement> create(const QualifiedName&, Document*);
     static PassRefPtr<HTMLOptionElement> createForJSConstructor(Document*, const String& data, const String& value,
        bool defaultSelected, bool selected, ExceptionCode&);
 
@@ -54,7 +54,8 @@ public:
     String label() const;
     void setLabel(const String&);
 
-    bool ownElementDisabled() const { return HTMLFormControlElement::disabled(); }
+    virtual bool isEnabledFormControl() const OVERRIDE { return !disabled(); }
+    bool ownElementDisabled() const { return m_disabled; }
 
     virtual bool disabled() const;
 
@@ -63,7 +64,7 @@ public:
     void setSelectedState(bool);
 
 private:
-    HTMLOptionElement(const QualifiedName&, Document*, HTMLFormElement* = 0);
+    HTMLOptionElement(const QualifiedName&, Document*);
 
     virtual bool supportsFocus() const;
     virtual bool isFocusable() const;
@@ -71,8 +72,6 @@ private:
     virtual void attach();
     virtual void detach();
     virtual void setRenderStyle(PassRefPtr<RenderStyle>);
-
-    virtual const AtomicString& formControlType() const;
 
     virtual void parseAttribute(Attribute*) OVERRIDE;
 
@@ -87,6 +86,7 @@ private:
 
     String m_value;
     String m_label;
+    bool m_disabled;
     bool m_isSelected;
     RefPtr<RenderStyle> m_style;
 };
